CMS-631: Spacing fixes

--- a/frontend/src/router/pages/PreviewChanges.scss
+++ b/frontend/src/router/pages/PreviewChanges.scss
@@ -6,10 +6,6 @@
 
     & > h2 {
       margin-bottom: var(--layout-margin-xlarge);
-
-      .feature-icon {
-        height: 1.25em;
-      }
     }
   }
 
