--- a/frontend/src/router/pages/SubmitDates.scss
+++ b/frontend/src/router/pages/SubmitDates.scss
@@ -1,12 +1,4 @@
 .page.submit-dates {
-  h2:not(.react-datepicker h2) {
-    margin-bottom: var(--layout-margin-xlarge);
-
-    .feature-icon {
-      height: 1.25em;
-    }
-  }
-
   .campground {
     // alternating background color
     &:nth-child(even) {
@@ -16,15 +8,10 @@
 
   .feature {
     margin-bottom: var(--layout-margin-large);
-    padding-block: var(--layout-padding-medium);
 
     // alternating background color
     &:nth-child(odd) {
       background-color: var(--surface-color-background-light-gray);
-    }
-
-    h3 {
-      margin-bottom: var(--layout-margin-xlarge);
     }
 
     .dates-row {
@@ -61,3 +48,5 @@
       transparent;
   }
 }
+
+// @TODO: spacing helpers for xl, xxl, etc.
