--- a/frontend/src/router/pages/SubmitWinterFeesDates.scss
+++ b/frontend/src/router/pages/SubmitWinterFeesDates.scss
@@ -1,8 +1,4 @@
 .page.submit-winter-fees-dates {
-  h4 {
-    margin-bottom: var(--layout-margin-xlarge);
-  }
-
   .date-type-header {
     font: var(--typography-regular-large-body); // "BC Sans"
     font-family: var(--bs-font-sans-serif); // "BCSans"
